@@ -9,6 +9,18 @@ Library: -
 JavaFx - 
 Jasper for report 
 ------------------------------------------------------------------------------------------------------------------------------
-there is how you can plugin jasper library with netbeans \n 
+here is how you can plugin jasper library with netbeans  
 https://community.jaspersoft.com/knowledgebase/how-to/build-jasper-report-using-jasper-library-using-net-beans-ide/
-
+------------------------------------------------------------------------------------------------------------------------------
+Javafx with Scene builder 
+Download :- 
+https://gluonhq.com/products/scene-builder/
+----------------------------------------------------------
+Download Javafx JDK : -
+https://www.azul.com/downloads/?package=jdk#zulu
+----------------------------------------------------------
+Download javafx SDK : - 
+https://openjfx.io/
+------------------------------------------------------------------------------------------------------------------------------
+use this in project properites \ VM options in (Don`t forget put your path)
+--module-path "C:\Program Files\NetBeans-21\openjfx-21.0.3_windows-x64_bin-sdk\javafx-sdk-21.0.3\lib" --add-modules javafx.controls,javafx.fxml
